# robot-localization-ekf

./: README.md
rectangle_run_data/: metadata.yaml
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: gazebo.launch.py
robot_description/scripts/: motor_command.cpp
robot_description/src/description/: robot.urdf
src/robot_autonomy/robot_local_localization/: CMakeLists.txt  package.xml  paths_visualization.rviz  setup.cfg  setup.py
src/robot_autonomy/robot_local_localization/launch/: ekf_localization.launch.py
src/robot_autonomy/robot_local_localization/robot_local_localization/: __init__.py  ekf_node.py  measurement_node.py  prediction_node.py  test_node.py
