<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>Robot description, control and localization nodes</description>

  <maintainer email="roboticlab1@todo.todo">roboticlab1</maintainer>
  <license>TODO</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 -->
  <depend>rclcpp</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <!-- TF -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Simulation & SLAM -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>rtabmap_ros</depend>

  <!-- Visualization & description -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
